fixed spacing

--- a/FJSHUD/app/styles/intellinote.less
+++ b/FJSHUD/app/styles/intellinote.less
@@ -39,7 +39,7 @@
 		@-moz-document url-prefix() {
 			.SearchHolder {
 				position: relative;
-				margin-bottom:30px;
+				margin-bottom:40px;
 
 			}
 		}
